# echo-server-modoki

./: LICENSE  README.md
doc/: api.yaml
erlang/: README.md  rebar.config
erlang/apps/erlang/src/: echo_handler.erl  erlang.app.src  erlang_app.erl  get_handler.erl  kvs_server.erl  set_handler.erl  tests.erl
erlang/config/: sys.config  vm.args
public/static/: api.json
python/: Pipfile
python/src/: server.py  storage.py
rust/: Cargo.toml
rust/src/: main.rs  storage.rs
