[package]
name = "rust"
version = "0.1.0"
authors = ["Aofusa <5000enPCinAOFUSA@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tracing = { version = "0.1", default-features = false, features = ["log", "std"] }
tracing-subscriber = "0.2"
tracing-log = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_derive = "1.0"

